# gol-gpu

./: CMakeLists.txt  README.md
include/: .gitignore
src/: CMakeLists.txt  font_renderer.cpp  font_renderer.hpp  imgui_util.hpp  main.cpp  shader_util.hpp
src/resources/: .gitignore  compute.comp  copyprg.comp  fragment.frag  initsh.comp  render_font.frag  render_font.vert  vertex.vert
